test/corpus/probes.txt
==============================
Probe: mixin with default and keyword arguments
==============================

@mixin button($bg: blue, $fg: white) {
  background: $bg;
  color: $fg;
}

.a {
  @include button($fg: black, $bg: red);
}

---

(stylesheet
  (mixin_statement
    (identifier)
    (parameters
      (parameter
        (variable)
        (plain_value))
      (parameter
        (variable)
        (plain_value)))
    (block
      (declaration
        (property_name)
        (variable))
      (declaration
        (property_name)
        (variable))))
  (rule_set
    (selectors
      (class_selector
        (class_name)))
    (block
      (include_statement
        (identifier)
        (arguments
          (argument
            (variable)
            (plain_value))
          (argument
            (variable)
            (plain_value)))))))

==============================
Probe: function with default arguments and return
==============================

@function double($n, $by: 2) {
  @return $n * $by;
}

---

(stylesheet
  (function_statement
    (identifier)
    (parameters
      (parameter
        (variable))
      (parameter
        (variable)
        (integer_value)))
    (block
      (return_statement
        (binary_expression
          (variable)
          (variable))))))

==============================
Probe: content block with arguments
==============================

@mixin hover($state) {
  &:hover {
    @content($state);
  }
}

---

(stylesheet
  (mixin_statement
    (identifier)
    (parameters
      (parameter
        (variable)))
    (block
      (rule_set
        (selectors
          (pseudo_class_selector
            (nesting_selector)
            (class_name)))
        (block
          (postcss_statement
            (at_keyword)
            (parenthesized_value
              (variable))))))))

==============================
Probe: include with a content block
==============================

.a {
  @include breakpoint(md) {
    color: red;
  }
}

---

(stylesheet
  (rule_set
    (selectors
      (class_selector
        (class_name)))
    (block
      (include_statement
        (identifier)
        (arguments
          (argument
            (plain_value)))
        (block
          (declaration
            (property_name)
            (plain_value)))))))

==============================
Probe: if, else if, and else
==============================

@if $a == 1 {
  a: 1;
} @else if $a == 2 {
  a: 2;
} @else {
  a: 3;
}

---

(stylesheet
  (if_statement
    (binary_expression
      (variable)
      (integer_value))
    (block
      (declaration
        (property_name)
        (integer_value)))
    (else_if_clause
      (binary_expression
        (variable)
        (integer_value))
      (block
        (declaration
          (property_name)
          (integer_value))))
    (else_clause
      (block
        (declaration
          (property_name)
          (integer_value))))))

==============================
Probe: each over a map with key and value
==============================

@each $name, $glyph in $icons {
  .icon-#{$name}:before {
    content: $glyph;
  }
}

---

(stylesheet
  (each_statement
    (variable)
    (variable)
    (variable)
    (block
      (rule_set
        (selectors
          (pseudo_class_selector
            (class_selector
              (class_name
                (identifier)
                (interpolation
                  (variable))))
            (class_name)))
        (block
          (declaration
            (property_name)
            (variable)))))))

==============================
Probe: for through
==============================

@for $i from 1 through 3 {
  .item-#{$i} {
    width: 2em * $i;
  }
}

---

(stylesheet
  (for_statement
    (variable)
    (integer_value)
    (integer_value)
    (block
      (rule_set
        (selectors
          (class_selector
            (class_name
              (identifier)
              (interpolation
                (variable)))))
        (block
          (declaration
            (property_name)
            (binary_expression
              (integer_value
                (unit))
              (variable))))))))

==============================
Probe: while
==============================

@while $i > 0 {
  .item-#{$i} {
    width: 2em * $i;
  }
}

---

(stylesheet
  (while_statement
    (binary_expression
      (variable)
      (integer_value))
    (block
      (rule_set
        (selectors
          (class_selector
            (class_name
              (identifier)
              (interpolation
                (variable)))))
        (block
          (declaration
            (property_name)
            (binary_expression
              (integer_value
                (unit))
              (variable))))))))

==============================
Probe: placeholder in a selector list
==============================

%message-shared {
  border: 1px solid #ccc;
}

.message, %other {
  padding: 10px;
}

---

(stylesheet
  (rule_set
    (selectors
      (placeholder
        (identifier)))
    (block
      (declaration
        (property_name)
        (integer_value
          (unit))
        (plain_value)
        (color_value))))
  (rule_set
    (selectors
      (class_selector
        (class_name))
      (placeholder
        (identifier)))
    (block
      (declaration
        (property_name)
        (integer_value
          (unit))))))

==============================
Probe: parent selector suffix
==============================

.block {
  &__element {
    color: red;
  }
  &--modifier {
    color: blue;
  }
}

---

(stylesheet
  (rule_set
    (selectors
      (class_selector
        (class_name)))
    (block
      (rule_set
        (selectors
          (class_selector
            (nesting_selector)
            (class_name)))
        (block
          (declaration
            (property_name)
            (plain_value))))
      (rule_set
        (selectors
          (class_selector
            (nesting_selector)
            (class_name)))
        (block
          (declaration
            (property_name)
            (plain_value)))))))

==============================
Probe: interpolation in selectors and property names
==============================

.icon-#{$name} {
  margin-#{$side}: 1px;
}

---

(stylesheet
  (rule_set
    (selectors
      (class_selector
        (class_name
          (identifier)
          (interpolation
            (variable)))))
    (block
      (declaration
        (property_name
          (identifier)
          (interpolation
            (variable)))
        (integer_value
          (unit))))))

==============================
Probe: module function call
==============================

.a {
  width: math.div(10px, 2);
}

---

(stylesheet
  (rule_set
    (selectors
      (class_selector
        (class_name)))
    (block
      (declaration
        (property_name)
        (call_expression
          (function_name)
          (arguments
            (integer_value
              (unit))
            (integer_value)))))))

==============================
Probe: debug
==============================

@debug "value: #{$x}";

---

(stylesheet
  (debug_statement
    (string_value)))

==============================
Probe: line comments
==============================

// a line comment
.a {
  // inside a block
  color: red; // trailing
}

---

(stylesheet
  (js_comment)
  (rule_set
    (selectors
      (class_selector
        (class_name)))
    (block
      (js_comment)
      (declaration
        (property_name)
        (plain_value))
      (js_comment))))
